# test-bot-API

./: .gitignore  Makefile  TODO  loader.py  pyproject.toml
apps/: urls.py
apps/answers/: urls.py
apps/answers/migrations/: 0001_initial.py  0002_alter_answerblock_false_answers_and_more.py
apps/answers/models/: __init__.py  block.py  science.py
apps/answers/serializers/: __init__.py  block.py  science.py
apps/answers/views/: __init__.py  block.py  science.py
apps/bots/: apps.py
apps/bots/logic/: __init__.py  check_answer.py  create_test.py  menu.py  start.py
apps/bots/root/: __main__.py  dispatcher.py  settings.py
apps/bots/utils/: keyboardbuilder.py  request.py
apps/tests/: apps.py  urls.py
apps/tests/migrations/: 0001_initial.py  0002_alter_block_keys.py
apps/tests/models/: __init__.py  block.py  sciense.py
apps/tests/serializers/: __init__.py  block.py  science.py
apps/tests/views/: __init__.py  block.py  (+1 more)
apps/users/: models.py  serializers.py  urls.py  views.py
bot/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
bot/migrations/: 0001_initial.py  0002_alter_answerscience_false_answers_and_more.py  0003_answerblock_created_at_answerscience_created_at.py  0004_remove_science_size_alter_science_keys.py
root/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_block_is_active_science_is_active.py  0004_checktestanswers.py  0005_remove_science_size.py  0006_remove_block_name_remove_block_size.py
(+2 files in other folders)
