[tool.poetry]
name = "test-bot-api"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pyproject-toml = "^0.0.10"
aiogram = "^3.3.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
